--- a/.env.example
+++ b/.env.example
@@ -19,12 +19,8 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
- DB_CONNECTION=mysql
- DB_HOST=127.0.0.1
- DB_PORT=3306
- DB_DATABASE=shop_db
- DB_USERNAME=root
- DB_PASSWORD=
+DB_CONNECTION=sqlite
+DB_DATABASE= # path to base sqlite in /database/database.sqlite
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
