support pages refactored
added layout, new classes, svg icons, background image

--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,17 @@
         "andreiio/blade-remix-icon": "^3.5",
         "blade-ui-kit/blade-heroicons": "^2.5",
         "blade-ui-kit/blade-zondicons": "^1.5",
+        "codeat3/blade-fluentui-system-icons": "^1.33",
+        "codeat3/blade-google-material-design-icons": "^1.19",
         "davidhsianturi/blade-bootstrap-icons": "^1.5",
         "faisal50x/blade-ionicons": "^1.0",
+        "hasnayeen/blade-eva-icons": "^2.0",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
         "livewire/volt": "^1.6",
         "mansoor/blade-lets-icons": "^1.0",
+        "owenvoke/blade-fontawesome": "^2.8",
         "postare/blade-mdi": "^1.1",
         "ryangjchandler/blade-tabler-icons": "^2.3",
         "symfony/mailer": "~7.1.0"
