--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "afatmustafa/blade-hugeicons": "^0.0.3",
         "anayarojo/shoppingcart": "^4.2",
         "andreiio/blade-remix-icon": "^3.5",
         "blade-ui-kit/blade-heroicons": "^2.5",
@@ -15,6 +16,7 @@
         "codeat3/blade-eos-icons": "^1.14",
         "codeat3/blade-fluentui-system-icons": "^1.33",
         "codeat3/blade-google-material-design-icons": "^1.19",
+        "codeat3/blade-phosphor-icons": "^2.2",
         "davidhsianturi/blade-bootstrap-icons": "^1.5",
         "faisal50x/blade-ionicons": "^1.0",
         "hasnayeen/blade-eva-icons": "^2.0",
