--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
         "codeat3/blade-eos-icons": "^1.14",
         "codeat3/blade-fluentui-system-icons": "^1.33",
         "codeat3/blade-google-material-design-icons": "^1.19",
+        "codeat3/blade-iconpark": "^1.6",
+        "codeat3/blade-mono-icons": "^1.4",
         "codeat3/blade-phosphor-icons": "^2.2",
         "davidhsianturi/blade-bootstrap-icons": "^1.5",
         "faisal50x/blade-ionicons": "^1.0",
@@ -28,7 +30,8 @@
         "owenvoke/blade-fontawesome": "^2.8",
         "postare/blade-mdi": "^1.1",
         "ryangjchandler/blade-tabler-icons": "^2.3",
-        "symfony/mailer": "~7.1.0"
+        "symfony/mailer": "~7.1.0",
+        "troccoli/blade-health-icons": "^4.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.14",
