project configuration refactored
Switched old icons to another svg's, rejected debugbar, .env.example refactored, some code refactored, added images to git, refactored code into OrderController (bug with commas in total price), refactored code in update methods for cigarette form and liquid form (rejected require rule from validation), added styles to error messages for liquid-edit form

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:tU7HOje2teERpqwjUAwPvUqHvbxo6aAKSEfoix9NGwI=
-APP_DEBUG=true
+APP_KEY=base64:gE1XHdr3oamrnuRAJWdEskMkdewRwsiIvHZe7n+RXI4=
+APP_DEBUG=false
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
+
+DEBUGBAR_ENABLED=false
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -20,9 +22,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
-DB_DATABASE= # path to base sqlite in /database/database.sqlite
+DB_URL=null
+DB_DATABASE=${APP_PATH}/database/database.sqlite
+DB_FOREIGN_KEYS=true
 
-SESSION_DRIVER=file
+SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -41,12 +45,12 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_USERNAME=f49133d950e685
+MAIL_PASSWORD=e368ddf477d511
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
