--- a/composer.json
+++ b/composer.json
@@ -6,30 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "afatmustafa/blade-hugeicons": "^0.0.3",
         "anayarojo/shoppingcart": "^4.2",
-        "andreiio/blade-remix-icon": "^3.5",
-        "blade-ui-kit/blade-heroicons": "^2.5",
-        "blade-ui-kit/blade-zondicons": "^1.5",
-        "codeat3/blade-clarity-icons": "^1.9",
-        "codeat3/blade-eos-icons": "^1.14",
-        "codeat3/blade-fluentui-system-icons": "^1.33",
-        "codeat3/blade-mono-icons": "^1.4",
-        "davidhsianturi/blade-bootstrap-icons": "^1.5",
-        "faisal50x/blade-ionicons": "^1.0",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
         "livewire/volt": "^1.6",
-        "mansoor/blade-lets-icons": "^1.0",
-        "owenvoke/blade-fontawesome": "^2.8",
-        "postare/blade-mdi": "^1.1",
-        "ryangjchandler/blade-tabler-icons": "^2.3",
-        "symfony/mailer": "~7.1.0",
-        "troccoli/blade-health-icons": "^4.0"
+        "symfony/mailer": "~7.1.0"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.14",
         "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
